@@ -24,7 +24,6 @@ import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.mockito.ArgumentMatchers.anyString;
@@ -124,7 +123,7 @@ public final class OAuthHelper {
 
             var verifierList = Stream.of(ecdsa, rsa)
                     .map(alg -> toTokenVerifier(alg, RES_MANAGEMENT_PORTAL))
-                    .collect(Collectors.toList());
+                    .toList();
 
             verifiers = List.of(new StaticTokenVerifierLoader(verifierList));
         }
